[package]
authors = ["Eric Trombly <etrombly@yahoo.com>"]
name = "country_parser"
version = "0.1.0"

[dependencies]
chrono = "0.4.0"
dbf = "0.1.1"
gdk-pixbuf = "0.2.0"
geo = "0.6.2"
gtk = "0.2.0"
gtk-sys = "0.4.0"
serde = "1.0.15"
serde_derive = "1.0.15"
relm = "0.10"
relm-attributes = "0.10"
relm-derive = "0.10"
location_history = "0.2.0"
rgeo = "0.2.0"

[profile.release]
lto = true
