[package]
authors = ["Eric Trombly <etrombly@yahoo.com>"]
name = "country_parser"
version = "0.1.0"

[dependencies]
chrono = "0.4.6"
dbf = "0.1.1"
gdk-pixbuf = "0.5.0"
geo = "0.10.0"
gtk = "0.5.0"
gtk-sys = "0.7.0"
serde = "1.0.79"
serde_derive = "1.0.79"
relm = "0.15.0"
relm-attributes = "0.15.0"
relm-derive = "0.15.0"
location_history = "0.2.0"
rgeo = "0.2.0"

[profile.release]
lto = true
